# gen/openapi/sheet/v1/sheet.openapi.yaml
@@ -462,6 +462,9 @@ components:
         cacheTtl:
           title: cache_ttl
           $ref: '#/components/schemas/google.protobuf.Duration'
+        writable:
+          type: boolean
+          title: writable
       title: CreateRequest
       additionalProperties: false
     sheet.v1.CreateResponse:
@@ -569,6 +572,9 @@ components:
         updatedAt:
           title: updated_at
           $ref: '#/components/schemas/google.protobuf.Timestamp'
+        writable:
+          type: boolean
+          title: writable
       title: Sheet
       additionalProperties: false
     sheet.v1.UpdateRequest:
@@ -593,6 +599,11 @@ components:
         cacheTtl:
           title: cache_ttl
           $ref: '#/components/schemas/google.protobuf.Duration'
+        writable:
+          type:
+            - boolean
+            - "null"
+          title: writable
       title: UpdateRequest
       additionalProperties: false
     sheet.v1.UpdateResponse:
